re PR rtl-optimization/39588 (internal compiler error: in trunc_int_for_mode, at explow.c:55)

PR rtl-optimization/39588
	* combine.c (merge_outer_ops): Do not set the constant when this
	is not necessary.
	(simplify_shift_const_1): Do not modify it either in this case.

From-SVN: r145431